addeduserprofilepage by Haseeb

--- a/DocStatus/login.html
+++ b/DocStatus/login.html
@@ -63,7 +63,7 @@
 
       function login() {
         event.preventDefault();
-        window.location.href = "ProfilePage.html";
+        window.location.href = "DoctorProfilePage.html";
       }
       function openLogin() {
         document.getElementsByClassName("signUpForm")[0].style.display = "none";
